deploy/teams/team4-sentences-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentences-name
    mode: name
    app.kubernetes.io/part-of: sentences
    version: v2
  name: name-v2
  namespace: $SENTENCES_NAME_NS
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentences-name
      mode: name
      app.kubernetes.io/part-of: sentences
      version: v2
  template:
    metadata:
      labels:
        app: sentences-name
        mode: name
        app.kubernetes.io/part-of: sentences
        version: v2
    spec:
      containers:
      - image: michaelvl/sentences:v1
        name: name
