deploy/teams/sentences.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentences
    mode: sentence
  name: sentences
  namespace: $SENTENCES_NS
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentences
      mode: sentence
  template:
    metadata:
      labels:
        app: sentences
        mode: sentence
    spec:
      containers:
      - image: michaelvl/sentences:v1
        name: sentences
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentences
    mode: sentence
  name: sentences
  namespace: $SENTENCES_NS
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: sentences
    mode: sentence
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentences
    mode: age
  name: age
  namespace: $SENTENCES_AGE_NS
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentences
      mode: age
  template:
    metadata:
      labels:
        app: sentences
        mode: age
    spec:
      containers:
      - image: michaelvl/sentences:v1
        name: age
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentences
    mode: age
  name: age
  namespace: $SENTENCES_AGE_NS
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: sentences
    mode: age
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentences
    mode: name
  name: name
  namespace: $SENTENCES_NAME_NS
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentences
      mode: name
  template:
    metadata:
      labels:
        app: sentences
        mode: name
    spec:
      containers:
      - image: michaelvl/sentences:v1
        name: name
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentences
    mode: name
  name: name
  namespace: $SENTENCES_NAME_NS
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: sentences
    mode: name
  type: ClusterIP
