deploy/teams/team2-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sentences
  namespace: $SENTENCES_NS
  labels:
    app.kubernetes.io/part-of: sentences
spec:
  http:
  - route:
    - destination:
        host: sentences.$SENTENCES_NS.svc.cluster.local
